--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
               <a href="Rajukusuma'sResume.pdf" class="btn">Download CV</a>
             </div>
             <div class="home-img padd-15">
-                <img src="images/kusuma.jpg" alt="Profile">
+                <img src="kusuma.jpg" alt="Profile">
             </div>
         </div>
     </div>
@@ -212,28 +212,28 @@
             <div class="portfolio-item padd-15">
                 <div class="portfolio-item-inner shadow-dark">
                     <div class="portfolio-img">
-                        <img src="images/calc-img.png" alt="Calculator" style="height: 300px;">
+                        <img src="calc-img.png" alt="Calculator" style="height: 300px;">
                     </div>
                 </div>
             </div>
             <div class="portfolio-item padd-15">
                 <div class="portfolio-item-inner shadow-dark">
                     <div class="portfolio-img">
-                        <img src="images/reg-form-img.jpg" alt="Reg-Form" style="height: 300px;;">
+                        <img src="reg-form-img.jpg" alt="Reg-Form" style="height: 300px;;">
                     </div>
                 </div>
             </div>
             <div class="portfolio-item padd-15">
                 <div class="portfolio-item-inner shadow-dark">
                     <div class="portfolio-img">
-                        <img src="images/tic-tac-toe-img.jpeg" alt="Tic-Tac-Toe-game" style="height: 300px;">
+                        <img src="tic-tac-toe-img.jpeg" alt="Tic-Tac-Toe-game" style="height: 300px;">
                     </div>
                 </div>
             </div>
             <div class="portfolio-item padd-15">
                 <div class="portfolio-item-inner shadow-dark">
                     <div class="portfolio-img">
-                        <img src="images/water_splash.jpg" alt="Landing page" style="height: 300px;">
+                        <img src="water_splash.jpg" alt="Landing page" style="height: 300px;">
                     </div>
                 </div>
             </div>
